--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
   "dependencies": {
-    "@google-cloud/synthetics-sdk-api": "^0.5.0"
-  }
+    "@google-cloud/functions-framework": "^3.3.0",
+    "@google-cloud/synthetics-sdk-api": "^0.5.0",
+    "axios": "^1.6.2",
+    "node-fetch": "^3.3.2",
+    "winston": "^3.11.0"
+  },
+  "name": "synthetic-monintoring",
+  "description": "Verify synthetic monitor.",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "functions-framework --target=SyntheticFunction",
+    "prestart": "npm run build",
+    "gcp-build": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
