--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0",
     "@google-cloud/synthetics-sdk-api": "^0.5.0",
+    "@types/puppeteer": "^7.0.4",
     "axios": "^1.6.2",
     "node-fetch": "^3.3.2",
+    "puppeteer": "^21.6.0",
     "winston": "^3.11.0"
   },
   "name": "synthetic-monintoring",
@@ -15,6 +17,7 @@
     "start": "functions-framework --target=SyntheticFunction",
     "prestart": "npm run build",
     "gcp-build": "npm run build",
+    "local": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
