--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "build": "tsc",
     "start": "functions-framework --target=SyntheticFunction",
     "prestart": "npm run build",
-    "gcp-build": "npm run build",
-    "local": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gcp-build": "node node_modules/puppeteer/install.mjs",
+    "local": "npm run build && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
